--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,7 +17,9 @@
 /src/pybind/mgr/test_orchestrator               @ceph/orchestrators
 /src/python-common/ceph/deployment              @ceph/orchestrators
 /qa/standalone/test_ceph_daemon.sh              @ceph/orchestrators
+/qa/tasks/ceph2.py                              @ceph/orchestrators
 /qa/tasks/mgr/test_orchestrator_cli.py          @ceph/orchestrators
+/qa/tasks/mgr/test_ssh_orchestrator.py          @ceph/orchestrators
 /doc/mgr/orchestrator_cli.rst                   @ceph/orchestrators
 /doc/mgr/orchestrator_modules.rst               @ceph/orchestrators
 
