--- a/doc/releases/releases.yml
+++ b/doc/releases/releases.yml
@@ -14,6 +14,8 @@
 releases:
   nautilus:
     releases:
+      - version: 14.2.5
+        released: 2019-12-10
       - version: 14.2.4
         released: 2019-09-17
       - version: 14.2.3
