tox: add py3 env
Signed-off-by: Kyr Shatskyy <kyrylo.shatskyy@suse.com>

--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,28 @@ deps=
   -r{toxinidir}/requirements.txt
   mock==2.0.0
   fudge
-  pytest-cov==1.6
-  coverage==3.7.1
+  pytest-cov==2.8.1
+  coverage==4.5.4
 
 commands=
     py.test --cov=teuthology --cov-report=term -v {posargs:teuthology scripts}
+
+
+[testenv:py3]
+basepython=python3
+install_command = pip install --upgrade {opts} {packages}
+passenv = HOME
+sitepackages=True
+deps=
+  -r{toxinidir}/requirements.txt
+  mock==2.0.0
+  fudge
+  pytest-cov==2.8.1
+  coverage==4.5.4
+
+commands=
+    py.test --cov=teuthology --cov-report=term -v {posargs:teuthology scripts}
+
 
 [testenv:py27-integration]
 install_command = pip install --upgrade {opts} {packages}
@@ -23,8 +40,8 @@ deps=
   -r{toxinidir}/requirements.txt
   mock==2.0.0
   fudge
-  pytest-cov==1.6
-  coverage==3.7.1
+  pytest-cov==2.8.1
+  coverage==4.5.4
 
 commands=py.test --cov=teuthology --cov-report=term -v {posargs:teuthology/test/integration teuthology/orchestra/test/integration}
 basepython=python2.7
