files,rpm,deb: rename ceph-daemon -> cephadm
This is just renaming the files and adjusting the packages.  Lots of
cleanup to do still.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,7 +8,7 @@
 /doc/mgr/dashboard.rst                          @ceph/dashboard
 
 # For Orchestrator related PRs
-/src/ceph-daemon                                @ceph/orchestrators
+/src/cephadm                                    @ceph/orchestrators
 /src/pybind/mgr/ansible                         @ceph/orchestrators
 /src/pybind/mgr/orchestrator_cli                @ceph/orchestrators
 /src/pybind/mgr/orchestrator.py                 @ceph/orchestrators
