--- a/qa/packages/packages.yaml
+++ b/qa/packages/packages.yaml
@@ -2,7 +2,7 @@
 ceph:
   deb:
   - ceph
-  - ceph-daemon
+  - cephadm
   - ceph-mds
   - ceph-mgr
   - ceph-common
@@ -35,7 +35,7 @@ ceph:
   - ceph-radosgw
   - ceph-test
   - ceph
-  - ceph-daemon
+  - cephadm
   - ceph-mgr
   - ceph-mgr-dashboard
   - ceph-mgr-diskprediction-cloud
