--- a/qa/suites/rados/ssh/mode/packaged.yaml
+++ b/qa/suites/rados/ssh/mode/packaged.yaml
@@ -2,4 +2,4 @@ overrides:
   ceph2:
     ceph_daemon_mode: packaged-ceph-daemon
   install:
-    extra_packages: [ceph-daemon]
+    extra_packages: [cephadm]
