--- a/debian/rules
+++ b/debian/rules
@@ -60,9 +60,9 @@ override_dh_auto_install:
 	install -D -m 644 src/etc-rbdmap $(DESTDIR)/etc/ceph/rbdmap
 	install -D -m 644 etc/sysctl/90-ceph-osd.conf $(DESTDIR)/etc/sysctl.d/30-ceph-osd.conf
 	install -D -m 600 sudoers.d/ceph-osd-smartctl $(DESTDIR)/etc/sudoers.d/ceph-osd-smartctl
-	install -D -m 600 sudoers.d/cephdaemon $(DESTDIR)/etc/sudoers.d/cephdaemon
+	install -D -m 600 sudoers.d/cephadm $(DESTDIR)/etc/sudoers.d/cephadm
 
-	install -m 755 src/ceph-daemon/ceph-daemon $(DESTDIR)/usr/sbin/ceph-daemon
+	install -m 755 src/cephadm/cephadm $(DESTDIR)/usr/sbin/cephadm
 
 # doc/changelog is a directory, which confuses dh_installchangelogs
 override_dh_installchangelogs:
@@ -135,7 +135,7 @@ override_dh_python2:
 	dh_python2 -p ceph-mgr
 	# batch-compile, and set up for delete, all the module files
 	dh_python2 -p ceph-mgr usr/lib/ceph/mgr
-	dh_python2 -p ceph-daemon
+	dh_python2 -p cephadm
 
 override_dh_python3:
 	for binding in rados cephfs rbd rgw; do \
