--- a/qa/suites/rados/thrash-old-clients/1-install/nautilus-v2only.yaml
+++ b/qa/suites/rados/thrash-old-clients/1-install/nautilus-v2only.yaml
@@ -11,7 +11,7 @@ tasks:
 - install:
     branch: nautilus
     exclude_packages:
-      - ceph-daemon
+      - cephadm
 - install.upgrade:
     mon.a:
     mon.b:
