--- a/qa/suites/rados/thrash-old-clients/1-install/nautilus.yaml
+++ b/qa/suites/rados/thrash-old-clients/1-install/nautilus.yaml
@@ -6,7 +6,7 @@ tasks:
 - install:
     branch: nautilus
     exclude_packages:
-      - ceph-daemon
+      - cephadm
 - install.upgrade:
     mon.a:
     mon.b:
