--- a/src/cephadm/tox.ini
+++ b/src/cephadm/tox.ini
@@ -12,4 +12,4 @@ commands=pytest {posargs}
 [testenv:mypy]
 basepython = python3
 deps = mypy
-commands = mypy {posargs:ceph-daemon}
+commands = mypy {posargs:cephadm}
