--- a/qa/suites/rados/ssh/mode/packaged.yaml
+++ b/qa/suites/rados/ssh/mode/packaged.yaml
@@ -1,5 +1,5 @@
 overrides:
   ceph2:
-    ceph_daemon_mode: packaged-ceph-daemon
+    cephadm_mode: cephadm-package
   install:
     extra_packages: [cephadm]
