--- a/qa/suites/rados/singleton-nomsgr/all/cephadm.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/cephadm.yaml
@@ -6,7 +6,6 @@ tasks:
     mon.a:
       - yum install -y python3 || apt install -y python3
 - workunit:
-    basedir: qa/standalone
     clients:
       client.0:
-        - test_ceph_daemon.sh
+        - cephadm/test_cephadm.sh
