--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ceph-daemon-adoption-corpus"]
-	path = ceph-daemon-adoption-corpus
-	url = https://github.com/ceph/ceph-daemon-adoption-corpus.git
+[submodule "cephadm-adoption-corpus"]
+	path = cephadm-adoption-corpus
+	url = https://github.com/ceph/cephadm-adoption-corpus.git
 [submodule "ceph-object-corpus"]
 	path = ceph-object-corpus
 	url = https://github.com/ceph/ceph-object-corpus.git
