--- a/qa/suites/rados/mgr/tasks/cephadm_orchestrator.yaml
+++ b/qa/suites/rados/mgr/tasks/cephadm_orchestrator.yaml
@@ -15,4 +15,4 @@ tasks:
         - No standby daemons available
   - cephfs_test_runner:
       modules:
-        - tasks.mgr.test_ssh_orchestrator
+        - tasks.mgr.test_cephadm_orchestrator
