--- a/qa/suites/rados/thrash-old-clients/1-install/mimic.yaml
+++ b/qa/suites/rados/thrash-old-clients/1-install/mimic.yaml
@@ -17,7 +17,7 @@ tasks:
       - ceph-mgr-diskprediction-local
       - ceph-mgr-diskprediction-cloud
       - ceph-mgr-rook
-      - ceph-mgr-ssh
+      - ceph-mgr-cephadm
       - cephadm
     extra_packages: ['librados2']
 - install.upgrade:
