--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ ptyprocess==0.5.1         # via pexpect
 py==1.5.3                 # via pytest, tox
 pyasn1==0.2.3
 pycparser==2.17           # via cffi
+pyjwt==1.7.1
 pynacl==1.3.0             # via paramiko
 pyopenssl==19.0.0
 pyparsing==2.2.0          # via cliff, cmd2, oslo.utils
