Includes --max-threads fix for valgrind RGW
Signed-off-by: Tejas Chandramouli <tchandra@redhat.com>

--- a/qa/suites/rgw/verify/tasks/rgw_s3tests.yaml
+++ b/qa/suites/rgw/verify/tasks/rgw_s3tests.yaml
@@ -6,7 +6,7 @@ tasks:
 - ceph:
 - rgw:
     client.0:
-      valgrind: [--tool=memcheck]
+      valgrind: [--tool=memcheck, --max-threads=1024]
 - s3tests:
     client.0:
       force-branch: ceph-luminous
