--- a/requirements3.txt
+++ b/requirements3.txt
@@ -32,7 +32,6 @@ debtcollector==1.13.0     # via oslo.config, oslo.utils, python-keystoneclient, 
 deprecation==1.0          # via openstacksdk
 docopt==0.6.2
 docutils==0.14            # via botocore
-first==2.0.1              # via pip-tools
 gevent==1.4.0
 greenlet==0.4.15          # via gevent
 httplib2==0.10.3
@@ -64,7 +63,7 @@ oslo.utils==3.25.0        # via osc-lib, oslo.serialization, python-cinderclient
 paramiko==2.4.2
 pbr==2.0.0                # via cliff, debtcollector, keystoneauth1, openstacksdk, osc-lib, oslo.i18n, oslo.serialization, oslo.utils, positional, python-cinderclient, python-glanceclient, python-keystoneclient, python-neutronclient, python-novaclient, python-openstackclient, requestsexceptions, stevedore
 pexpect==4.2.1
-pip-tools==1.10.1
+pip-tools==4.3.0
 pluggy==0.7.1             # via pytest, tox
 positional==1.1.1         # via keystoneauth1, python-keystoneclient
 prettytable==0.7.2        # via cliff, python-cinderclient, python-glanceclient, python-novaclient
@@ -101,3 +100,6 @@ virtualenv==15.1.0        # via tox
 warlock==1.2.0            # via python-glanceclient
 wrapt==1.10.10            # via debtcollector, positional, python-glanceclient
 xmltodict==0.12.0
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
