--- a/requirements3.txt
+++ b/requirements3.txt
@@ -59,7 +59,7 @@ oslo.config==3.24.0       # via python-keystoneclient
 oslo.i18n==3.15.0         # via osc-lib, oslo.config, oslo.utils, python-cinderclient, python-glanceclient, python-keystoneclient, python-neutronclient, python-novaclient, python-openstackclient
 oslo.serialization==2.18.0  # via python-keystoneclient, python-neutronclient, python-novaclient
 oslo.utils==3.25.0        # via osc-lib, oslo.serialization, python-cinderclient, python-glanceclient, python-keystoneclient, python-neutronclient, python-novaclient, python-openstackclient
-paramiko==2.4.2
+paramiko==2.7.1
 pbr==2.0.0                # via cliff, debtcollector, keystoneauth1, openstacksdk, osc-lib, oslo.i18n, oslo.serialization, oslo.utils, positional, python-cinderclient, python-glanceclient, python-keystoneclient, python-neutronclient, python-novaclient, python-openstackclient, requestsexceptions, stevedore
 pexpect==4.7.0
 pip-tools==4.3.0
@@ -69,7 +69,7 @@ prettytable==0.7.2        # via cliff, python-cinderclient, python-glanceclient,
 psutil==5.2.2
 ptyprocess==0.5.1         # via pexpect
 py==1.5.3                 # via pytest, tox
-pyasn1==0.2.3             # via paramiko
+pyasn1==0.2.3
 pycparser==2.17           # via cffi
 pyjwt==1.7.1
 pynacl==1.3.0             # via paramiko
