tox: requirements.txt -> requirement2.txt
Signed-off-by: Kyr Shatskyy <kyrylo.shatskyy@suse.com>

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ install_command = pip install --upgrade {opts} {packages}
 passenv = HOME
 sitepackages=True
 deps=
-  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/requirements2.txt
   mock==2.0.0
   fudge
   pytest-cov==2.8.1
@@ -37,7 +37,7 @@ install_command = pip install --upgrade {opts} {packages}
 passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWORD OS_USERNAME
 sitepackages=True
 deps=
-  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/requirements2.txt
   mock==2.0.0
   fudge
   pytest-cov==2.8.1
@@ -57,7 +57,7 @@ install_command = pip install --upgrade {opts} {packages}
 basepython=python
 changedir=docs
 deps=
-  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/requirements2.txt
   sphinx
   mock==2.0.0
 commands=
@@ -69,7 +69,7 @@ install_command = pip install --upgrade {opts} {packages}
 passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWORD OS_USERNAME
 sitepackages=True
 deps=
-  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/requirements2.txt
   mock==2.0.0
 
 commands=py.test -v {posargs:teuthology/openstack/test/test_openstack.py}
@@ -79,7 +79,7 @@ basepython=python2.7
 passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWORD OS_USERNAME
 basepython=python2
 deps=
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements2.txt
     mock==2.0.0
 
 commands=
@@ -90,6 +90,6 @@ passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWOR
 basepython=python2
 sitepackages=True
 deps=
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements2.txt
 
 commands={toxinidir}/openstack-delegate.sh
