tox: use requirements3.txt for py3 env
Signed-off-by: Kyr Shatskyy <kyrylo.shatskyy@suse.com>

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ install_command = pip install --upgrade {opts} {packages}
 passenv = HOME
 sitepackages=True
 deps=
-  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/requirements3.txt
   mock==2.0.0
   fudge
   pytest-cov==2.8.1
