tox: add flake8-py3 env
Signed-off-by: Kyr Shatskyy <kyrylo.shatskyy@suse.com>

--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,13 @@ deps=
   flake8
 commands=flake8 --select=F,E9 {posargs:teuthology scripts}
 
+[testenv:flake8-py3]
+basepython=python3
+install_command = pip install --upgrade {opts} {packages}
+deps=
+  flake8
+commands=flake8 --select=F,E9 {posargs:teuthology scripts}
+
 [testenv:docs]
 install_command = pip install --upgrade {opts} {packages}
 basepython=python
