--- a/qa/machine_types/vps.yaml
+++ b/qa/machine_types/vps.yaml
@@ -7,7 +7,7 @@ overrides:
         mon lease: 15
         mon lease ack timeout: 25
   s3tests:
-    force-branch: ceph-master
+    force-branch: ceph-master-py3
     idle_timeout: 1200
   ceph-fuse:
     client.0:
