--- a/qa/rgw_pool_type/ec-profile.yaml
+++ b/qa/rgw_pool_type/ec-profile.yaml
@@ -7,5 +7,5 @@ overrides:
       m: 1
       crush-failure-domain: osd
   s3tests:
-    force-branch: ceph-master
+    force-branch: ceph-master-py3
     slow_backend: true
