--- a/qa/suites/rados/basic/tasks/rgw_snaps.yaml
+++ b/qa/suites/rados/basic/tasks/rgw_snaps.yaml
@@ -28,7 +28,7 @@ tasks:
     - default.rgw.log
 - s3readwrite:
     client.0:
-      force-branch: ceph-master
+      force-branch: ceph-master-py3
       rgw_server: client.0
       readwrite:
         bucket: rwtest
