--- a/qa/suites/rgw/multifs/tasks/rgw_readwrite.yaml
+++ b/qa/suites/rgw/multifs/tasks/rgw_readwrite.yaml
@@ -4,7 +4,7 @@ tasks:
 - rgw: [client.0]
 - s3readwrite:
     client.0:
-      force-branch: ceph-master
+      force-branch: ceph-master-py3
       rgw_server: client.0
       readwrite:
         bucket: rwtest
