--- a/qa/suites/rgw/thrash/workload/rgw_readwrite.yaml
+++ b/qa/suites/rgw/thrash/workload/rgw_readwrite.yaml
@@ -1,7 +1,7 @@
 tasks:
 - s3readwrite:
     client.0:
-      force-branch: ceph-master
+      force-branch: ceph-master-py3
       rgw_server: client.0
       readwrite:
         bucket: rwtest
