--- a/qa/suites/rgw/thrash/workload/rgw_roundtrip.yaml
+++ b/qa/suites/rgw/thrash/workload/rgw_roundtrip.yaml
@@ -1,7 +1,7 @@
 tasks:
 - s3roundtrip:
     client.0:
-      force-branch: ceph-master
+      force-branch: ceph-master-py3
       rgw_server: client.0
       roundtrip:
         bucket: rttest
