rpm/cephadm: start description and summary with capital letter
This commit fixes RPMLINT issue:

cephadm.x86_64: E: summary-not-capitalized (Badness: 20) C cephadm utility to bootstrap Ceph clusters
Summary doesn't begin with a capital letter.

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -405,11 +405,11 @@ Recommends:    chrony
 Base is the package that includes all the files shared amongst ceph servers
 
 %package -n cephadm
-Summary:        cephadm utility to bootstrap Ceph clusters
+Summary:        Utility to bootstrap Ceph clusters
 Requires:       podman
 %description -n cephadm
-cephadm utility to bootstrap a Ceph cluster and manage ceph daemons
-deployed with systemd and podman.
+Utility to bootstrap a Ceph cluster and manage Ceph daemons deployed 
+with systemd and podman.
 
 %package -n ceph-common
 Summary:	Ceph Common
