--- a/qa/suites/rgw/website/overrides.yaml
+++ b/qa/suites/rgw/website/overrides.yaml
@@ -1,9 +1,11 @@
 # see http://tracker.ceph.com/issues/20360 and http://tracker.ceph.com/issues/18126
-os_type: centos
+#os_type: centos
+# ubuntu and no valgrind until we migrate test to py3
+os_type: ubuntu
 
 overrides:
   install:
-    flavor: notcmalloc
+#    flavor: notcmalloc
   ceph:
     conf:
       global:
@@ -21,8 +23,8 @@ overrides:
         rgw enable apis: s3website
     rgw:
       client.0:
-        valgrind: [--tool=memcheck, --max-threads=1024] # http://tracker.ceph.com/issues/25214
+#        valgrind: [--tool=memcheck, --max-threads=1024] # http://tracker.ceph.com/issues/25214
       client.1:
-        valgrind: [--tool=memcheck, --max-threads=1024] # http://tracker.ceph.com/issues/25214
+#        valgrind: [--tool=memcheck, --max-threads=1024] # http://tracker.ceph.com/issues/25214
   s3tests:
     calling-format: subdomain
