qa/cephfs/begin: libaio-devel on el8
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/cephfs/begin.yaml
+++ b/qa/cephfs/begin.yaml
@@ -10,5 +10,5 @@ tasks:
               'dump', 'indent']
         rpm: ['bison', 'flex', 'elfutils-libelf-devel', 'openssl-devel',
               # for xfstests-dev
-              'libaio-dev']
+              'libaio-devel']
   - ceph:
