--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -288,11 +288,7 @@ BuildRequires:	xmlsec1-devel
 BuildRequires:	xmlsec1-nss
 BuildRequires:	xmlsec1-openssl
 BuildRequires:	xmlsec1-openssl-devel
-%if 0%{?rhel} == 7
-BuildRequires:  pyOpenSSL%{_python_buildid}
-%else
-BuildRequires:  python%{_python_buildid}-pyOpenSSL
-%endif
+BuildRequires:  python%{python3_pkgversion}-pyOpenSSL
 %endif
 %endif
 %if 0%{?suse_version}
@@ -479,11 +475,7 @@ Recommends:	ceph-mgr-k8sevents = %{_epoch_prefix}%{version}-%{release}
 Recommends:	ceph-mgr-cephadm = %{_epoch_prefix}%{version}-%{release}
 Recommends:	python%{python3_pkgversion}-influxdb
 %endif
-%if 0%{?rhel} == 7
-Requires:       pyOpenSSL
-%else
 Requires:       python%{python3_pkgversion}-pyOpenSSL
-%endif
 %description mgr
 ceph-mgr enables python modules that provide services (such as the REST
 module derived from Calamari) and expose CLI hooks.  ceph-mgr gathers
